--- a/Nishant/js/iteration_statement.html
+++ b/Nishant/js/iteration_statement.html
@@ -35,6 +35,11 @@
                 i++;
             }
             while(i <= elementsWithId)        }
+            const person = {fname:"John", lname:"Doe", age:25};
+            person.work='developer'
+            for ( i in person){
+                console.log(person[i])
+            }
     </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
