--- a/Nishant/js/task/cratetable.html
+++ b/Nishant/js/task/cratetable.html
@@ -15,11 +15,7 @@
         function table(){
             var i = document.getElementById('input').value
             for (var x = 1 ; x<=10; x++){
-                var y = x*i
-                var row = document.createElement('p')
-                row.innerHTML = i +' ' +'*'+' '+x+' ' +'='+' ' + y + '<hr>'
-                document.getElementById('table').appendChild(row)
-
+                document.getElementById('table').innerHTML += i +' ' +'*'+' '+x+' ' +'='+' ' + (x*i) + '<hr>'
             }
         }
     </script>
