--- a/Nishant/js/conditional_statements.html
+++ b/Nishant/js/conditional_statements.html
@@ -30,6 +30,7 @@
         //     output.innerHTML='The number is Zero';
         // }
         // }
+        // number1 > 0 ? (output.innerHTML = "The number is positive.") : number1 < 0 ? (output.innerHTML = "The number is Negative.") : (output.innerHTML = "The number is Zero");
         number1 > 0
           ? (output.innerHTML = "The number is positive.")
           : number1 < 0
